--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="asset/img/onaz_marca_mockup_thumb.png">
     <link rel="shortcut icon" href="/assets/img/Prati_fivecon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script defer src="assets/script/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script defer src="assets/script/script.js"></script>
     <title>Bula Digital - Prati-Donaduzzi</title>
+
 </head>
 <body id="corpo">
     <nav id="cabecalho" class="nav">
